Fix desktop hero overflow

--- a/web/_sass/_hero.scss
+++ b/web/_sass/_hero.scss
@@ -1,5 +1,9 @@
 .hero {
     overflow: hidden;
+
+    @include desktop {
+        overflow: visible;
+    }
 }
 
 .hero-body {
